k8s/security/istio-policies.yaml
# Istio security policies
# Layer: L7 (complements NetworkPolicy at L3/L4)
# k8s/security/istio-policies.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: STRICT

# Deny no authorization header
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-no-token
  namespace: service-1
spec:
  selector:
    matchLabels:
      app: service-1
  action: DENY
  rules:
    - when:
        - key: request.headers[authorization]
          notValues: ["*"]

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress
  namespace: service-1
spec:
  selector:
    matchLabels:
      app: service-1
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["*"]
      when:
        - key: request.headers[authorization]
          values: ["*"]


---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-from-service-1
  namespace: service-2
spec:
  selector:
    matchLabels:
      app: service-2
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/service-1/sa/service-1"]
      to:
        - operation:
            methods: ["GET"]
            paths: ["/"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-no-token
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  action: DENY
  rules:
    - when:
        - key: request.headers[authorization]
          notValues: ["*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-ingress
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  action: ALLOW
  rules:
    - from:
        - source:
            principals: ["*"]
      when:
        - key: request.headers[authorization]
          values: ["*"]
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-lateral-movement
  namespace: service-3
spec:
  selector:
    matchLabels:
      app: service-3
  action: DENY
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/service-1/sa/service-1"
              - "cluster.local/ns/service-2/sa/service-2"
